<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.digitalent.laptopreviews.MainActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/gradient_background"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="45dp"
                    android:src="@drawable/fathur" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:text="@string/author"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                style="@style/LayoutProfile">

                <ImageView
                    style="@style/IconProfile"
                    android:src="@drawable/ic_email_black_24dp" />

                <TextView
                    style="@style/TextProfile"
                    android:text="@string/author_email"/>
            </LinearLayout>

            <LinearLayout
                style="@style/LayoutProfile">

                <ImageView
                    style="@style/IconProfile"
                    android:src="@drawable/ic_local_phone_black_24dp" />

                <TextView
                    style="@style/TextProfile"
                    android:text="@string/author_phone"/>
            </LinearLayout>

            <LinearLayout
                style="@style/LayoutProfile">

                <ImageView
                    style="@style/IconProfile"
                    android:src="@drawable/ic_business_black_24dp" />

                <TextView
                    style="@style/TextProfile"
                    android:text="@string/author_work"/>
            </LinearLayout>

            <LinearLayout
                style="@style/LayoutProfile">

                <ImageView
                    style="@style/IconProfile"
                    android:src="@drawable/ic_work_black_24dp" />

                <TextView
                    style="@style/TextProfile"
                    android:text="@string/author_occupation"/>
            </LinearLayout>

            <LinearLayout
                style="@style/LayoutProfile">

                <ImageView
                    style="@style/IconProfile"
                    android:src="@drawable/ic_school_black_24dp" />

                <TextView
                    style="@style/TextProfile"
                    android:text="@string/author_university"/>
            </LinearLayout>

            <LinearLayout
                style="@style/LayoutProfile">

                <ImageView
                    style="@style/IconProfile"
                    android:src="@drawable/ic_cake_black_24dp" />

                <TextView
                    style="@style/TextProfile"
                    android:text="@string/author_born"/>
            </LinearLayout>

            <LinearLayout
                style="@style/LayoutProfile">

                <ImageView
                    style="@style/IconProfile"
                    android:src="@drawable/ic_mood_black_24dp" />

                <TextView
                    style="@style/TextProfile"
                    android:text="@string/author_mood"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>